Reverse geocoding is done before refreshing tableView data in main screen.

--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -5,3 +5,6 @@
   Created by Belén  on 17/01/13.
   Copyright (c) 2013 Mapplas. All rights reserved.
 */
+
+/* Reverse geocoding error */
+"descriptive_geoloc_error" = "Oops! It seems that you're in Wonderland.";
