--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -8,3 +8,12 @@
 
 /* Reverse geocoding error */
 "descriptive_geoloc_error" = "Ups! Google no es capaz de posicionarte.";
+
+/* Pull to refresh pull message */
+"ptr_pull_to_refresh" = "Tira para refrescar...";
+
+/* Pull to refresh release message */
+"ptr_release_to_refresh" = "Suelta para refrescar...";
+
+/* Pull to refresh loading message */
+"ptr_refreshing" = "Cargando aplicaciones...";
