--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -17,3 +17,34 @@
 
 /* Pull to refresh loading message */
 "ptr_refreshing" = "Cargando aplicaciones...";
+
+/* Euro currency */
+"currency_euro" = "€";
+
+/* Dollar currency */
+"currency_dollar" = "$";
+
+/* Pin singular text */
+"pin_sing_text" = "pin";
+
+/* Pin plural text */
+"pin_plural_text" = "pins";
+
+/* Pin unpin text */
+"un_pin_up" = "unpin";
+
+/* Rate plural text */
+"rate_plural_text" = "valoraciones";
+
+/* Rate singular text */
+"rate_singular_text" = "valora";
+
+/* Like plural text */
+"likes_text" = "likes";
+
+/* Share text */
+"share_text" = "comparte";
+
+/* Block text */
+"block_text" = "bloquea";
+
