Top bar with app info and action bar in app detail completed. Rating not avaliable.

--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -53,3 +53,6 @@
 
 /* Apps refreshing cell text */
 "loading_cell_text" = "Cargando aplicaciones...";
+
+/* Detail screen call text */
+"call_text" = "llama";
