--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -53,3 +53,6 @@
 
 /* Apps refreshing cell text */
 "loading_cell_text" = "Loading Apps...";
+
+/* Detail screen call text */
+"call_text" = "call";
