--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -56,3 +56,15 @@
 
 /* Detail screen call text */
 "call_text" = "llama";
+
+/* App detail - developer text */
+"app_detail_developer_label_text" = "Desarrollador";
+
+/* App detail - developer email */
+"app_detail_developer_email_button" = "Email desarrolador";
+
+/* App detail - developer web */
+"app_detail_developer_web_button" = "Web del Desarrolador";
+
+/* App detail - support button */
+"app_detail_developer_support_button" = "Asistencia";
