--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -68,3 +68,6 @@
 
 /* App detail - support button */
 "app_detail_developer_support_button" = "Asistencia";
+
+/* App detail - comments list header text */
+"app_detail_comment_list_title" = "Comentarios";
