--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -89,3 +89,18 @@
 
 /* Rating - excellent app */
 "app_rating_excellent_app" = "Excellent";
+
+/* Rating - rate it text */
+"app_rating_rate_it_text" = "Rate it!";
+
+/* Rating modal screen - Review text */
+"app_rating_modal_review_text" = "Review";
+
+/* Rating modal screen - Title text */
+"app_rating_modal_title_text" = "Title";
+
+/* Navigation bar button - Cancel */
+"nav_bar_button_cancel" = "Cancel";
+
+/* Navigation bar button - Done */
+"nav_bar_button_done" = "Done";
