Support developer email and web page buttons work. Asistency does not.

--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -149,3 +149,6 @@
 
 /* Email sharing mail subject */
 "share_email_subject" = "Shared via Mapplas";
+
+/* Email app developer contact email subject */
+"app_developer_email_contact" = "";
