--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -164,3 +164,10 @@
 
 /* User screen warning text signed-in */
 "user_warning_text_signed_in" = "To access your configuration, login!";
+
+/* User screen list header pins label */
+"user_list_header_pins_label" = "pins";
+
+/* User screen list header blocks label */
+"user_list_header_blocks_label" = "blocks";
+
