Blocked apps are also shown in list with its cell type.

--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -170,3 +170,6 @@
 
 /* User screen list header blocks label */
 "user_list_header_blocks_label" = "bloqueadas";
+
+/* User screen block cell unblock label text */
+"user_list_blocked_cell_unblock_text" = "allow";
