--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -178,7 +178,7 @@
 "user_footer_sign_out_button_text" = "Sign Out";
 
 /* Footer config button label text */
-"user_footer_config_button_text" = "Configuración";
+"user_footer_config_button_text" = "Menú";
 
 /* User screen name not set text */
 "user_info_name_not_set_text" = "Nombre";
@@ -235,7 +235,16 @@
 "conf_screen_terms_text" = "Terminos de uso. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae tellus sapien. Nullam placerat, lorem nec lobortis gravida, nisi ipsum placerat augue, non auctor justo diam non nisi. Phasellus ullamcorper sodales dolor sed tincidunt. Nulla aliquet quam vel nisi dignissim id elementum tellus aliquet. Vivamus sodales posuere augue sed accumsan. Vivamus fermentum erat quis quam hendrerit dapibus faucibus ligula condimentum. Fusce convallis vulputate turpis, in iaculis orci tempus non. Nulla varius augue quis nibh venenatis pharetra. Proin luctus, turpis id ultrices convallis, massa lectus hendrerit purus, eu vehicula velit arcu vel turpis.";
 
 /* Configuration screen policy title */
-"conf_screen_policy_title" = "Política de privacidad.";
+"conf_screen_policy_title" = "Política de privacidad";
 
 /* Configuration screen policy text */
 "conf_screen_policy_text" = "Política de privacidad. \n  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vitae tellus sapien. Nullam placerat, lorem nec lobortis gravida, nisi ipsu";
+
+/* Configuration screen contact title */
+"conf_screen_contact_title" = "Contacta con nosotros";
+
+/* Config contact us email */
+"config_contact_us_email" = "support@mapplas.com";
+
+/* Config contact us email subject */
+"config_contact_us_email_subject" = "¡Hola!";
