Set localized strings to segmented control in user screen.

--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -248,3 +248,9 @@
 
 /* Config contact us email subject */
 "config_contact_us_email_subject" = "Hello!";
+
+/* User screen segmented control blocks title */
+"user_screen_segmented_control_blocks" = "Blocked";
+
+/* User screen segmented control pinned title */
+"user_screen_segmented_control_pins" = "Pinned";
