--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -258,5 +258,14 @@
 /* Location not found error message */
 "location_error_dialog_message" = "Your location cannot be found. Press Home button and try again later.";
 
+/* Network connection not found error message */
+"network_error_dialog_message" = "Enable wifi or network connection to continue.";
+
+/* Network not found error title */
+"network_error_dialog_title" = "Network problem";
+
 /* Location not found error title */
 "location_error_dialog_title" = "Location problem";
+
+/* Wifi not connected toast text */
+"wifi_error_toast" = "Improve the search! For more accurate recommendations, turn Wi-Fi on. This works even when not connected to a network.";
