--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -258,5 +258,14 @@
 /* Location not found error message */
 "location_error_dialog_message" = "No ha sido posible posicionarte. Pulsa el boton Home e inténtalo de nuevo mas tarde.";
 
+/* Network not found error title */
+"network_error_dialog_title" = "Problema de red";
+
+/* Network connection not found error message */
+"network_error_dialog_message" = "Activa el wifi o las conexiones de red para continuar...";
+
 /* Location not found error title */
 "location_error_dialog_title" = "Problema de localización";
+
+/* Wifi not connected toast text */
+"wifi_error_toast" = "Obten una busqueda más precisa! Activa la conexión Wi-Fi. Funcionará incluso sin que te conectes a una red.";
