--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -60,8 +60,8 @@
 /* App detail - developer text */
 "app_detail_developer_label_text" = "Desarrollador";
 
-/* App detail - developer email */
-"app_detail_developer_email_button" = "Email desarrolador";
+/* App detail - app support */
+"app_detail_developer_email_button" = "Soporte";
 
 /* App detail - developer web */
 "app_detail_developer_web_button" = "Web del Desarrolador";
