--- a/Mapplas/Mapplas/es.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/es.lproj/Localizable.strings
@@ -6,6 +6,9 @@
   Copyright (c) 2013 Mapplas. All rights reserved.
 */
 
+/* Navigation controller title */
+"nav_controller_title" = "Mapplas";
+
 /* Reverse geocoding error */
 "descriptive_geoloc_error" = "Ups! Google no es capaz de posicionarte.";
 
