Added 'soon' error cell. When server sends error both when user does not exists and when apps are wrong parsed, that cell is shown. Also when any app is sent to user everything going ok.

--- a/Mapplas/Mapplas/en.lproj/Localizable.strings
+++ b/Mapplas/Mapplas/en.lproj/Localizable.strings
@@ -290,3 +290,9 @@
 
 /* Review alert cancell button title */
 "review_alert_cancel_button" = "No, thanks";
+
+"comming_soon_title" = "Mapplas shows great apps around you.";
+
+"comming_soon_subtitle" = "Or your country is not currently supported or something went wrong.";
+
+"comming_soon_pull" = "Pull to refresh...";
